--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "Paulo Moreira",
   "license": "ISC",
   "devDependencies": {
+    "@types/config": "^3.3.0",
     "@types/express": "^4.17.13",
     "@types/jsonwebtoken": "^8.5.8",
     "@types/node": "^18.6.4",
@@ -20,6 +21,7 @@
     "typescript": "^4.7.4"
   },
   "dependencies": {
+    "config": "^3.3.7",
     "express": "^4.18.1",
     "http-status-codes": "^2.2.0",
     "jsonwebtoken": "^8.5.1",
